Наши первые изменения

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <p>git + github</p>
+  <h2>Hello</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptates adipisci incidunt quis alias beatae illo, nisi similique, laborum, voluptatum neque cum quibusdam dolorum doloremque temporibus sunt officia distinctio quas.</p>
 </body>
 </html>
